--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/dotlottie-react": "^0.9.1",
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "axios": "^1.7.7",
+    "font-awesome": "^4.7.0",
     "groq-sdk": "^0.7.0",
     "llamaai": "^1.0.4",
     "lottie-react": "^2.4.0",
